cmake_minimum_required(VERSION 3.25)
project(college)

set(CMAKE_CXX_STANDARD 17)

add_executable(college main.cpp lab5/lab5.h lab5/lab5.cpp lab8/lab8.h options/options.h options/options.cpp lab8/lab8.cpp lab6/lab6.cpp lab7/lab7.cpp utils/utils.cpp utils/utils.h lab17/lab17.h lab17/lab17.cpp lab18/lab18.h lab18/lab18.cpp)
